--- a/index.html
+++ b/index.html
@@ -9,19 +9,18 @@
             background-color: rgb(28, 27, 27);
             color: white;
             font-family: Arial, Helvetica, sans-serif;
-            padding: 50px;
+            padding: 40px;
         }
 
         #container{
-            max-width: 700px;
+            max-width: 600px;
             height: fit-content;
-            padding: 80px;
+            padding: 40px;
             margin: auto;
             background-color: rgb(0, 0, 0);
             outline: 2px solid white;
             outline-offset: 5px;
-            border-radius: 10px;
-            text-align: center;
+            border-radius: 14px;
         }
 
         #container h1 {
@@ -30,6 +29,10 @@
 
         #container h3 {
             font-weight: normal;
+        }
+
+        h1,h3, #action, #skills, #container{
+            text-align: center;
         }
 
         #skills p{
@@ -42,17 +45,18 @@
             font-size: 15px;
             margin: 5px;
         }
+        
 
         
         #action{
             display: flex;
             flex-direction: row;
             justify-content: center;
-            gap: 15px;
+            gap: 12px;
             margin: 20px;
         }
 
-        #action button{
+        button{
             background-color: rgb(138, 4, 255);
             color: white;
             padding: 12px 18px;
