--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Minifolio - 3SHA</title>
     <style>
         body{
             background-color: rgb(28, 27, 27);
@@ -117,3 +117,4 @@
     }
 </script>
 </html>
+
